# hft_backtest_demo

./: .gitignore  CLAUDE.md  README.md  mypy.ini  pyproject.toml
.specify/memory/: constitution.md
docs/: data_format.md  framework_summary.md  microstructure_model.md  orderbook_alignment.md  price_crossing_enhancement.md  testing_summary.md
examples/: create_sample_data.py  run_backtest.py  visualize_results.py
examples/strategies/: tutorial_maker.py
src/analysis/: hft_metrics.py  metrics.py  report.py  visualization.py
src/cli/: main.py
src/core/: constants.py  exceptions.py  microstructure.py  orderbook.py  orderbook_state.py  pnl.py  price_cross_detector.py  protocols.py  queue.py  unified_orderbook.py
src/engine/: backtest.py  config.py  events.py  state.py
src/strategy/: actions.py  base.py  context.py
src/strategy/examples/: aggressive_maker.py  simple_maker.py  spread_maker.py
tests/integration/: test_backtest_multi_day.py  test_backtest_simple.py  test_quickstart.py  test_reproducibility.py
tests/performance/: test_latency.py  test_memory.py  test_throughput.py
tests/unit/: test_data.py  test_engine_contract.py  test_loader_contract.py  test_matching.py  test_pnl.py  test_queue.py  test_queue_contract.py  test_strategy_contract.py  test_types.py
